--- a/Not UI Suppressed/app.config
+++ b/Not UI Suppressed/app.config
@@ -12,7 +12,7 @@
                 <value>True</value>
             </setting>
             <setting name="sipEmailAddress" serializeAs="String">
-                <value>sip:scottha@microsoft.com</value>
+                <value>sip:jyoung@oesx.com</value>
             </setting>
         </SuperSimpleLyncKiosk.Properties.Settings>
     </userSettings>
