Improved settings window handling

--- a/LyncKioskTray/app.config
+++ b/LyncKioskTray/app.config
@@ -10,6 +10,9 @@
             <setting name="autoAnswer" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="fullScreen" serializeAs="String">
+                <value>True</value>
+            </setting>
         </LyncKioskTray.Properties.Settings>
     </userSettings>
     <runtime>
