Added a setting for turning full-screen on or off

--- a/LyncKioskTray/Properties/Settings.settings
+++ b/LyncKioskTray/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="autoAnswer" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="fullScreen" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
