Added an option to auto-accept screen sharing

--- a/LyncKioskTray/Properties/Settings.settings
+++ b/LyncKioskTray/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="fullScreen" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="autoAcceptScreenSharing" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
