--- a/LyncKioskTray/app.config
+++ b/LyncKioskTray/app.config
@@ -13,6 +13,9 @@
             <setting name="fullScreen" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="autoAcceptScreenSharing" serializeAs="String">
+                <value>True</value>
+            </setting>
         </LyncKioskTray.Properties.Settings>
     </userSettings>
     <runtime>
